<resources>
    <string name="app_name">Mano y Mente</string>
    <string name="cd_home">Botón de inicio</string>
    <string name="cd_sound">Botón de sonido</string>
    <string name="selection_instruction">¡Selecciona tu aventura con animales o figuras!</string>
    <string name="cd_animals">Aventura con animales</string>
    <string name="cd_figures">Aventura con figuras</string>
    <string name="cd_mascot">Mascota que señala</string>
    <string name="cd_background">Fondo de madera con bordes</string>
    <string name="cd_title">Título del juego: Mano y Mente</string>
    <string name="nombre_jugador">Nombre jugador</string>
    <string name="fondo_principal">Fondo principal</string>
    <string name="mano_madera">Mano de madera</string>
    <string name="manos_progreso">Progreso del juego</string>
    <string name="boton_tabla_posiciones">Tabla de posiciones</string>
    <string name="boton_mis_estudiantes">Mis estudiantes</string>
    <string name="boton_registrar_estudiantes">Registrar estudiantes</string>
    <string name="titulo_nombre_animal">Título nombre del animal</string>
    <string name="instruccion_seleccion">¡Selecciona tu aventura con animales o figuras!</string>
    <string name="boton_sonido">Botón de sonido</string>
    <string name="boton_retroceso">Botón de retroceso</string>
    <string name="boton_panel_docente">Botón panel de docente</string>
    <string name="boton_inicio_juego">Botón inicio de juego</string>
    <string name="boton_inicio_felicidades">Botón vuelta a inicio felicidades</string>
    <string name="boton_jugar_de_nuevo">"Botón jugar de nuevo "</string>
    <string name="boton_home">Botón de home</string>
    <string name="boton_categoria_animales">Botón categoría de animales</string>
    <string name="boton_categoria_figuras">Botón categoría de figuras</string>
    <string name="boton_cerrar_ventana">Botón para cerrar ventana</string>
    <string name="mensaje_ventana_emergente">Aún no hay partidas registradas.</string>
    <string name="nombre_titulo_pieza">Pieza</string>
    <string name="resultado_tabla_pieza">Resultado</string>
    <string name="tiempo_tabla_pieza">Tiempo</string>
    <string name="resumen_nombre">Resumen: [Nombre]</string>
    <string name="categorias_animales_figuras">Categoría: [Animales/Figuras]</string>
    <string name="titulo_pantalla_editar_estudiante">Editar Estudiante</string>
    <string name="escribir_nombre_ninio">Nombre del niño</string>
    <string name="texto_edad">Edad:</string>
    <string name="boton_4">4</string>
    <string name="boton_3">3</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_eliminar">Eliminar</string>
    <string name="boton_guardar">Guardar</string>
    <string name="ejemplo_nombre_leaderboard">Sofía</string>
    <string name="informacion_edad">5</string>
    <string name="boton_icono_editar">Botón editar</string>
    <string name="boton_jugar">Jugar</string>
    <string name="informacion_numero_posicion">1</string>
    <string name="informacion_aciertos_errores">45/2</string>
    <string name="boton_resumen_juego">Botón resumen juego</string>
    <string name="boton_leaderboard_animales">Animales</string>
    <string name="boton_leaderboard_figuras">Figuras</string>
    <string name="numero_tabla_leaderboard">#</string>
    <string name="nombre_tabla_leaderboard">Nombre</string>
    <string name="avatar_tabla_leaderboard">Avatar</string>
    <string name="edad_tabla_leaderboard">Edad</string>
    <string name="aciertos_errores_tabla_leaderboard">Aciertos/Errores</string>
    <string name="detalle_tabla_leaderboard">Detalle</string>
    <string name="nombre_tabla_estudiantes">Nombre</string>
    <string name="avatar_tabla_estudiantes">Avatar</string>
    <string name="edad_tabla_estudiantes">Edad</string>
    <string name="editar_tabla_estudiantes">Editar</string>
    <string name="titulo_pantalla_registro">Registrar Nuevo Estudiante</string>
    <string name="nombre_pantalla_registrar">Nombre:</string>
    <string name="ejemplo_nombre_pantalla_registrar">Ej. Sofía Valverde</string>
    <string name="edad_pantalla_registrar">Edad:</string>
    <string name="boton_3_pantalla_registrar">3</string>
    <string name="boton_4_pantalla_registrar">4</string>
    <string name="avatar_pantalla_registrar">Avatar:</string>
    <string name="guardar_pantalla_registrar">Guardar</string>
    <string name="accion_tabla_estudiante">Acción</string>
    <string name="boton_ayuda">boton_ayuda</string>
</resources>